refactor: removed tasks from db and added them from json
